--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
                     <li><a href="#About-us">О нас</a></li>
                     <li><a href="#Training">Школа тату</a></li>
                     <li><a href="#Services">Магазин</a></li>
-                    <li><a href="#contact">Контакты</a></li>
+                    <li><a href="#contact" href="https://t.me/tochkaiskusstva">Контакты</a></li>
                 </ul>
             </div>
 
@@ -386,4 +386,5 @@
 
   <script src="js/main.js"></script>
 </body>
+
 </html>
