Update1 index.html

--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
                     <li><a href="#About-us">О нас</a></li>
                     <li><a href="#Training">Школа тату</a></li>
                     <li><a href="#Services">Магазин</a></li>
-                    <li><a href="#contact" href="https://t.me/tochkaiskusstva">Контакты</a></li>
+                    <li><a href="https://t.me/tochkaiskusstva">Контакты</a></li>
                 </ul>
             </div>
 
@@ -388,3 +388,4 @@
 </body>
 
 </html>
+
